# Foundational-ML-papers

./: AI_agents_from_first_principles.ipynb  Autoencoder_from_scrath.ipynb  GANs_from_scratch.ipynb  README.md  pyproject.toml  transformers.ipynb
2013/: Autoencoder_from_scrath.ipynb  VAE_experimentation.ipynb
2014/: GANs_experimentation.ipynb
2015/: UNET_experimentation.ipynb  UNET_from_Scratch.ipynb
2017/: LSTM_MoE.ipynb  transformers_v2.ipynb
2018/: BERT.ipynb  GPT_MoE.ipynb
2024/: Step_by_step_diffusion.ipynb
misc/blog_implementations/: approximating_kld.ipynb  measuring_matmul.py
